# rust-projects

./: .gitignore
collections/src/: exercises.rs  hash_maps.rs  main.rs  strings.rs
control_flow/src/: main.rs
data_structures/src/: main.rs
data_types/src/: main.rs
enums/src/: main.rs  match_flow.rs
functions/src/: main.rs
guessing_game/src/: main.rs
loops/src/: main.rs
music_discord/: Cargo.toml
music_discord/src/: main.rs
ownership/src/: borrowing.rs  main.rs  slices.rs
panic/src/: main.rs
ping_discord/: Cargo.toml
ping_discord/src/: main.rs
rectangles/src/: main.rs
restaurant/src/: lib.rs
restaurant_separate_files/: Cargo.toml
round_robin/: Cargo.toml
round_robin/src/: main.rs
structs/src/: main.rs
to_do_list/src/: main.rs
variables/src/: main.rs
